# cmake-templates

./: .gitignore  LICENSE  README.md
helpers/: proj-template.cmake
helpers/templates/: CMakeLists.txt.in
helpers/templates/app/: CMakeLists_app.txt.in  CMakeLists_lib.txt.in  main.c
helpers/templates/src/: CMakeLists_app.txt.in  CMakeLists_lib.txt.in  app_lib.c
helpers/templates/src/include/proj_name/: app_lib.h
helpers/templates/test/: CMakeLists.txt.in  test1.c  test2.c
simple_app/: CMakeLists.txt
simple_app/app/: CMakeLists.txt  simple_app.c
simple_app/cmake/: readme.txt
simple_app/src/: CMakeLists.txt  simple_app_lib.c  simple_app_lib.h
simple_app/test/: CMakeLists.txt  test1.c  test2.c
